# gen-cv

./: .gitignore  README.md  config_utils.py  cv-gen.py  gen-cv.py  main.py  models.py  pdf_generator.py  pyproject.toml  requirements.txt  utils.py  wijnand.yaml
config/: template.yaml  wijnand_van_der_meijs.yaml
